# clause-and-effect

./: .gitignore  README.md  pyproject.toml
src/: config.py  main_dev.py
src/clause_and_effect/: __init__.py
src/clause_and_effect/agents/: __init__.py  compliance_agent.py
src/clause_and_effect/generators/: __init__.py  generator.py
src/clause_and_effect/parsers/: __init__.py  base_parser.py  gdpr_parser.py
src/clause_and_effect/retrieval/: __init__.py  embedding_generator.py  vector_db.py
src/scripts/: index_documents.py
